Fixed black format

--- a/notebooks/cluster_emissions.ipynb
+++ b/notebooks/cluster_emissions.ipynb
@@ -13,10 +13,13 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "from data_common.notebook import *\n",
     "from data_common.pandas.df_extensions.space import SpacePDAccessor as SpaceCluster\n",
-    "from la_emissions_data.la_mapping import lower_tier_sandwich, lower_tier_layer, gdf_chart"
+    "from la_emissions_data.la_mapping import (\n",
+    "    lower_tier_sandwich,\n",
+    "    lower_tier_layer,\n",
+    "    gdf_chart,\n",
+    ")"
    ]
   },
   {
@@ -32,7 +35,12 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(Path(\"data\", \"interim\", \"la_emissions_similarity.csv\")).la.get_council_info([\"local-authority-type-name\"]).set_index(\"local-authority-code\").drop([\"LND\"])"
+    "df = (\n",
+    "    pd.read_csv(Path(\"data\", \"interim\", \"la_emissions_similarity.csv\"))\n",
+    "    .la.get_council_info([\"local-authority-type-name\"])\n",
+    "    .set_index(\"local-authority-code\")\n",
+    "    .drop([\"LND\"])\n",
+    ")"
    ]
   },
   {
@@ -588,7 +596,7 @@
    "source": [
     "cluster = c.set_k(5).set_anchor(Path(\"data\", \"interim\", \"cluster_anchor.csv\"))\n",
     "\n",
-    "#cluster.store_anchor(Path(\"data\", \"interim\", \"cluster_anchor.csv\"))\n",
+    "# cluster.store_anchor(Path(\"data\", \"interim\", \"cluster_anchor.csv\"))\n",
     "\n",
     "labels_d = {\n",
     "    1: (\"Agriculture\", \"Above average agriculture, domestic score\"),\n",
@@ -610,7 +618,7 @@
     "    ),\n",
     "}\n",
     "\n",
-    "labels_short_d = {x: y[0] for x,y in labels_d.items()}\n",
+    "labels_short_d = {x: y[0] for x, y in labels_d.items()}\n",
     "\n",
     "cluster = cluster.add_labels(labels_d)"
    ]
@@ -672,7 +680,7 @@
     "        color=alt.Color(\n",
     "            \"properties.cluster_label:O\",  # type: ignore\n",
     "            scale=color_scale,  # type: ignore\n",
-    "            legend=alt.Legend( # type: ignore \n",
+    "            legend=alt.Legend(  # type: ignore\n",
     "                title=\"\",  # type: ignore\n",
     "                orient=\"top\",  # type: ignore\n",
     "                titleFontSize=18,  # type: ignore\n",
@@ -687,7 +695,11 @@
     "# put between layers\n",
     "chart = lower_tier_sandwich(chart)\n",
     "chart = chart.configure_legend(labelLimit=300)\n",
-    "chart = chart.properties(title=\"Lower tier authorities clustered by CO2 emissions profiles (v3)\", width=800, height=600)\n",
+    "chart = chart.properties(\n",
+    "    title=\"Lower tier authorities clustered by CO2 emissions profiles (v3)\",\n",
+    "    width=800,\n",
+    "    height=600,\n",
+    ")\n",
     "\n",
     "caption = \"Source: mySociety analysis of BEIS dataset; House of Commons LA cartogram (Open Parliament Licence)\"\n",
     "chart.display_options(logo=True, caption=caption)\n",
@@ -719,7 +731,7 @@
     "\n",
     "df = df[[\"label\", \"desc\"]]\n",
     "df.loc[\"LND\"] = [\"City of London\", \"City of London does not have a comparable emissions profile\"]  # type: ignore\n",
-    "df = df.reset_index()\n"
+    "df = df.reset_index()"
    ]
   },
   {
