--- a/docs/_downloads/uk-local-authority-emissions-data-json/0.3.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-json/0.3.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: uk_local_authority_emissions_data_json
 filename: uk_local_authority_emissions_data.json
 version: '0.3'
-full_version: '0.3'
+full_version: 0.3.0
 file: /data/uk_local_authority_emissions_data/0.3/uk_local_authority_emissions_data.json
 ---
