--- a/docs/_downloads/uk-local-authority-emissions-data-json/1.0.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-json/1.0.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: uk_local_authority_emissions_data_json
 filename: uk_local_authority_emissions_data.json
 version: '1.0'
-full_version: '1.0'
+full_version: 1.0.0
 file: /data/uk_local_authority_emissions_data/1.0/uk_local_authority_emissions_data.json
 ---
