--- a/docs/_downloads/uk-local-authority-emissions-data-la-labels/0.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-la-labels/0.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: la_labels
 filename: la_labels.csv
 version: '0'
-full_version: '0'
+full_version: 0.4.0
 file: /data/uk_local_authority_emissions_data/0/la_labels.csv
 ---
