--- a/docs/_downloads/uk-local-authority-emissions-data-la-labels/1.0.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-la-labels/1.0.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: la_labels
 filename: la_labels.csv
 version: '1.0'
-full_version: '1.0'
+full_version: 1.0.0
 file: /data/uk_local_authority_emissions_data/1.0/la_labels.csv
 ---
