--- a/docs/_downloads/uk-local-authority-emissions-data-local-authority-emissions/0.3.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-local-authority-emissions/0.3.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: local_authority_emissions
 filename: local_authority_emissions.csv
 version: '0.3'
-full_version: '0.3'
+full_version: 0.3.0
 file: /data/uk_local_authority_emissions_data/0.3/local_authority_emissions.csv
 ---
