--- a/docs/_downloads/uk-local-authority-emissions-data-local-authority-emissions/0.4.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-local-authority-emissions/0.4.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: local_authority_emissions
 filename: local_authority_emissions.csv
 version: '0.4'
-full_version: '0.4'
+full_version: 0.4.0
 file: /data/uk_local_authority_emissions_data/0.4/local_authority_emissions.csv
 ---
