--- a/docs/_downloads/uk-local-authority-emissions-data-xlsx/0.1.md
+++ b/docs/_downloads/uk-local-authority-emissions-data-xlsx/0.1.md
@@ -5,6 +5,6 @@ package: uk_local_authority_emissions_data
 title: uk_local_authority_emissions_data_xlsx
 filename: uk_local_authority_emissions_data.xlsx
 version: '0.1'
-full_version: '0.1'
+full_version: 0.1.0
 file: /data/uk_local_authority_emissions_data/0.1/uk_local_authority_emissions_data.xlsx
 ---
