Update to new pages layout

--- a/docs/_datasets/uk_local_authority_emissions_data/0.1.0.md
+++ b/docs/_datasets/uk_local_authority_emissions_data/0.1.0.md
@@ -62,7 +62,7 @@ resources:
       example: 2005
     - name: local-authority-code
       type: string
-      description: Three letter code for local authorities (see https://mysociety.github.io/uk_local_authority_names_and_codes/)
+      description: Three letter code for local authorities (see https://pages.mysociety.org/uk_local_authority_names_and_codes/)
       constraints:
         unique: false
       example: ABC
